impl user related operations
