# restapi/operations/identity/whoami_responses.go
@@ -56,91 +56,3 @@ func (o *WhoamiOK) WriteResponse(rw http.ResponseWriter, producer runtime.Produc
 		}
 	}
 }
-
-// WhoamiUnauthorizedCode is the HTTP code returned for type WhoamiUnauthorized
-const WhoamiUnauthorizedCode int = 401
-
-/*WhoamiUnauthorized Get Current User's Info Failed, no login
-
-swagger:response whoamiUnauthorized
-*/
-type WhoamiUnauthorized struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.Error `json:"body,omitempty"`
-}
-
-// NewWhoamiUnauthorized creates WhoamiUnauthorized with default headers values
-func NewWhoamiUnauthorized() *WhoamiUnauthorized {
-
-	return &WhoamiUnauthorized{}
-}
-
-// WithPayload adds the payload to the whoami unauthorized response
-func (o *WhoamiUnauthorized) WithPayload(payload *models.Error) *WhoamiUnauthorized {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the whoami unauthorized response
-func (o *WhoamiUnauthorized) SetPayload(payload *models.Error) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *WhoamiUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(401)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-// WhoamiInternalServerErrorCode is the HTTP code returned for type WhoamiInternalServerError
-const WhoamiInternalServerErrorCode int = 500
-
-/*WhoamiInternalServerError Server Error
-
-swagger:response whoamiInternalServerError
-*/
-type WhoamiInternalServerError struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.Error `json:"body,omitempty"`
-}
-
-// NewWhoamiInternalServerError creates WhoamiInternalServerError with default headers values
-func NewWhoamiInternalServerError() *WhoamiInternalServerError {
-
-	return &WhoamiInternalServerError{}
-}
-
-// WithPayload adds the payload to the whoami internal server error response
-func (o *WhoamiInternalServerError) WithPayload(payload *models.Error) *WhoamiInternalServerError {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the whoami internal server error response
-func (o *WhoamiInternalServerError) SetPayload(payload *models.Error) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *WhoamiInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(500)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
